--- a/monitor-ui/package.json
+++ b/monitor-ui/package.json
@@ -23,7 +23,7 @@
     "js-cookie": "^2.2.1",
     "serialize-javascript": "^3.1.0",
     "style-resources-loader": "^1.2.1",
-    "typescript": "^3.9.2",
+    "typescript": "^4.6.4",
     "vee-validate": "^2.0.6",
     "view-design": "4.3.2",
     "vue": "^2.6.12",
@@ -31,7 +31,8 @@
     "vue-grid-layout": "2.1.13",
     "vue-i18n": "^8.15.0",
     "vue-router": "^3.1.3",
-    "vuex": "^3.1.1"
+    "vuex": "^3.1.1",
+    "webpack": "^4.44.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.11.0",
